--- a/maddogutilities/build.gradle
+++ b/maddogutilities/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 ext {
     PUBLISH_GROUP_ID = 'com.maddog05'
     PUBLISH_ARTIFACT_ID = 'maddogutilities'
-    PUBLISH_VERSION = '0.2'
+    PUBLISH_VERSION = '0.3'
 }
 
 android {
@@ -13,10 +13,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 2
-        versionName "0.2"
-
-//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionCode 3
+        versionName "0.3"
 
     }
     buildTypes {
@@ -27,16 +25,7 @@ android {
     }
 }
 
-// Copy the file locally and use
-//apply from: 'android-release-aar.gradle'
-// or use the remote copy to keep update with latest changes
-apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
-
 dependencies {
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-//    compile 'com.android.support:appcompat-v7:25.3.1'
-//    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.3.1'
 }
