--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,5 +27,9 @@ dependencies {
     })
     compile project(':maddogutilities')
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile('com.github.bumptech.glide:glide:4.1.1') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     testCompile 'junit:junit:4.12'
 }
