--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.maddog05.sampleutils">
 
+    <!--DANGEROUS PERMISSIONS-->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!--NORMAL PERMISSION-->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -37,7 +39,12 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".activity.NumbersActivity"></activity>
+        <activity
+            android:name=".activity.NumbersActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ImageLoaderActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
