--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile('com.github.bumptech.glide:glide:4.1.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
+    compile ('com.facebook.fresco:fresco:1.5.0'){
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     testCompile 'junit:junit:4.12'
 }
