--- a/maddogutilities/build.gradle
+++ b/maddogutilities/build.gradle
@@ -1,20 +1,21 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 ext {
     PUBLISH_GROUP_ID = 'com.maddog05'
     PUBLISH_ARTIFACT_ID = 'maddogutilities'
-    PUBLISH_VERSION = '0.7.0'
+    PUBLISH_VERSION = '1.0.0'
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 9
-        versionName "0.7.0"
+        targetSdkVersion 27
+        versionCode 10
+        versionName "1.0.0"
 
     }
     buildTypes {
@@ -27,5 +28,9 @@ android {
 
 dependencies {
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
