--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.maddog05.sampleutils"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -23,20 +23,20 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':maddogutilities')
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile('com.github.bumptech.glide:glide:4.1.1') {
+    implementation project(':maddogutilities')
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation('com.github.bumptech.glide:glide:4.1.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    compile ('com.facebook.fresco:fresco:1.5.0'){
+    implementation ('com.facebook.fresco:fresco:1.5.0'){
         exclude group: 'com.android.support', module: 'support-core-utils'
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
     mavenCentral()
