--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 19 15:54:54 COT 2017
-ndk.dir=C\:\\Users\\Computer\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Computer\\AppData\\Local\\Android\\Sdk
+#Mon May 01 11:45:58 PET 2017
+sdk.dir=/Users/andreetorres/Library/Android/sdk
